--- a/apps/expo/app.json
+++ b/apps/expo/app.json
@@ -3,9 +3,11 @@
     "name": "solito-nativewind",
     "slug": "solito-nativewind",
     "version": "1.0.0",
-    "sdkVersion": "44.0.0",
     "scheme": "solito-nativewind",
-    "platforms": ["ios", "android"],
+    "platforms": [
+      "ios",
+      "android"
+    ],
     "ios": {
       "bundleIdentifier": "com.solito.nativewind"
     }
