--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -9,9 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@expo/next-adapter": "^3.1.20",
+    "@expo/next-adapter": "^4.0.12",
     "app": "*",
-    "next": "12.1.0",
+    "next": "^12.2.5",
     "raf": "^3.4.1",
     "react-native-web": "0.18.6",
     "nativewind": "latest"
@@ -19,7 +19,7 @@
   "devDependencies": {
     "@types/node": "17.0.21",
     "autoprefixer": "^10.4.7",
-    "eslint-config-next": "^12.1.0",
+    "eslint-config-next": "12.2.5",
     "next-compose-plugins": "^2.2.1",
     "next-transpile-modules": "^9.0.0",
     "tailwindcss": "^3.0.24"
