upgrade to expo 46

--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "scripts": {
     "native": "cd apps/expo && expo start",
     "web": "cd apps/next && yarn next"
+  },
+  "resolutions": {
+    "react-native-reanimated": "2.8.0"
   }
 }
