--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -4,22 +4,22 @@
     "expo": "^46.0.0",
     "expo-splash-screen": "~0.16.1",
     "expo-status-bar": "~1.4.0",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
-    "react-native": "0.69.4",
-    "react-native-gesture-handler": "~2.5.0",
-    "react-native-reanimated": "~2.9.1",
-    "react-native-safe-area-context": "4.3.1",
-    "react-native-screens": "~3.15.0",
-    "react-native-web": "~0.18.7",
-    "nativewind": "latest"
+    "nativewind": "latest",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.70.0",
+    "react-native-gesture-handler": "~2.6.0",
+    "react-native-reanimated": "~2.10.0",
+    "react-native-safe-area-context": "4.3.3",
+    "react-native-screens": "~3.17.0",
+    "react-native-web": "~0.18.7"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
     "@types/react": "~18.0.0",
     "@types/react-native": "~0.69.1",
-    "typescript": "^4.6.3",
-    "tailwindcss": "^3.0.24"
+    "tailwindcss": "^3.1.8",
+    "typescript": "^4.6.3"
   },
   "scripts": {
     "start": "expo start --dev-client",
