--- a/apps/next/.babelrc.json
+++ b/apps/next/.babelrc.json
@@ -7,7 +7,7 @@
     ["@babel/plugin-proposal-class-properties", { "loose": true }],
     ["@babel/plugin-proposal-private-methods", { "loose": true }],
     ["@babel/plugin-proposal-private-property-in-object", { "loose": true }],
-    ['nativewind/babel', { mode: 'transformOnly' }],
+    ["nativewind/babel", { "mode": "transformOnly" }],
     "react-native-reanimated/plugin"
   ]
 }
