--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -11,16 +11,18 @@
   "dependencies": {
     "@expo/next-adapter": "^4.0.12",
     "app": "*",
+    "nativewind": "latest",
     "next": "^12.2.5",
     "raf": "^3.4.1",
-    "react-native-web": "0.18.6",
-    "nativewind": "latest"
+    "react-native-web": "0.18.9"
   },
   "devDependencies": {
-    "@types/node": "17.0.21",
-    "autoprefixer": "^10.4.7",
+    "@types/node": "18.7.15",
+    "autoprefixer": "^10.4.8",
     "eslint-config-next": "12.2.5",
     "next-compose-plugins": "^2.2.1",
+    "next-fonts": "^1.5.1",
+    "next-images": "^1.8.4",
     "next-transpile-modules": "^9.0.0",
     "tailwindcss": "^3.0.24"
   }
