--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -6,13 +6,10 @@
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
     "expo-linking": "^3.0.0",
-    "react-native-reanimated": "2.8.0",
     "moti": "canary",
-    "solito": "latest",
-    "nativewind": "latest"
-  },
-  "resolutions": {
-    "react-native-reanimated": "2.8.0"
+    "nativewind": "latest",
+    "react-native-reanimated": "2.8.0",
+    "solito": "latest"
   },
   "sideEffects": false
 }
